[tool.poetry]
name = "influencertracker"
version = "0.1.0"
description = "..."
authors = ["Suman Sadhukhan <sumanxdata.netlify.app>"]

# Add this line to pin yourself below Py 4.0:
python = ">=3.12,<4.0"
[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "reportlab>=4.4.2",
    "streamlit>=1.47.0",
]
